<resources>
    <string name="app_name">basicApi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textView_name">Name</string>
    <string name="textView_Username">Username</string>
    <string name="textView_Email">email</string>
    <string name="textView_a_Street">Street of the address</string>
    <string name="textView_a_Suite">Suite of Address</string>
    <string name="textView_a_City">City of the Address</string>
    <string name="textView_a_Zipcode">Zipcode of Address</string>
    <string name="textView_UserID">User_ID</string>
    <string name="btn_user">Search User</string>
</resources>