<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/textView_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_UserID" />

    <TextView
        android:id="@+id/textView_Username"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/textView_Username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <TextView
        android:id="@+id/textView_Email"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/textView_Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Username" />

    <TextView
        android:id="@+id/textView_a_Street"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/textView_a_Street"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Email" />

    <TextView
        android:id="@+id/textView_a_Suite"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/textView_a_Suite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_a_Street" />

    <TextView
        android:id="@+id/textView_a_City"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/textView_a_City"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_a_Suite" />

    <TextView
        android:id="@+id/textView_a_Zipcode"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/textView_a_Zipcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_a_City" />

    <TextView
        android:id="@+id/textView_UserID"
        android:layout_width="83dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/textView_UserID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUserID"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_UserID"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView_Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_name"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_Email"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextAddressStreet"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_a_Street"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextAddressSuite"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_a_Suite"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddressStreet"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextAddressCity"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_a_City"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddressSuite"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextAddressZipcode"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_a_Zipcode"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddressCity"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_Username"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_user"
        app:layout_constraintStart_toEndOf="@+id/editTextUserID"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>